--- a/docs/styles.css
+++ b/docs/styles.css
@@ -10,6 +10,8 @@ body {
 }
 
 /*  Sizing, formatting, media selectors */
+@media screen and (min-width:1020px) {
+   
 body {
     display: flex;
     justify-content: center;
@@ -41,4 +43,41 @@ body {
     }
     .banner-title {
         align-self: center;;
+    }
+}
+
+@media screen and (max-width:1024px) {
+   
+    body {
+        display: flex;
+        justify-content: center;
+    }
+    .container {
+        width: 100%;
+        border-width: 8px;
+        margin: 3px;
+        border-color: white;
+        padding-left: 3px;
+        padding-right:  3px;
+        }
+        .banner {
+            margin:  0;
+            padding: 0%;
+            display: flex;;
+            width: 100%;
+        }
+        .logo {
+            align-self: flex-start;;
+        }
+    
+        .logo img {
+            margin: 0;
+            padding: 0;
+            filter: invert(1);
+            fill: none;
+            width: 30px;
+        }
+        .banner-title {
+            align-self: center;;
+        }
     }
